Maverick Synergy 3.0.0-RC5 - TBC

Bug Fixes
    o FileLoggingContext fails with NPE when log path is relative.   
    o Authenticators setup in SshClientContext would incorrectly be attempted multiple times. 
    o ClientStateListener authenticate method no longer passes a List of Authenticator objects to be started after it returns. Authentication should be initiated within the authenticate handler.
    o Ensure that password authenticator future is triggered when wrapped with in automatic keyboard-interactive conversion.
    o Don't pass authenticator to PasswordOverKeyboardInteractiveCallback because there is no way for its future to be completed.
    o OpenSSH certificate extensions values and critical options not encoded correctly during sign operation. 
    o Fixed connection-based logging which was incorrectly preventing logging without an identification or user configured value.
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC4 - Mar 17, 2021

Features
    o Added shutdownAndExit method to SshEngine designed for calling before application shutdown (it is the applications responsibility to exit, this is just for clean up).
    o Added context option to disable preference of using keyboard-interactive authentication over password.
    
Bug Fixes
    o Fixed race condition where authentication client can receive failure message from the none authenticator.
    o OpenSSH RSA certificate incorrectly attempted to be decoded as ECDSA.
    o NPE when DefaultLoggingContext.shutdown is called and no file watcher has been initialized.
    o Removed synchronization from EventServiceImplementation to prevent delays in event handlers from slowing down other threads.

-----------------

Maverick Synergy 3.0.0-RC3 - Feb 2, 2021

Bug Fixes
    o Ensure console logger flushes out after a log statement has been written to console.