@@ -228,9 +228,9 @@ public class VirtualMappedFile extends AbstractFileAdapter implements
 			throws FileNotFoundException, IOException,
 			PermissionDeniedException {
 		try {
-			if(Log.isDebugEnabled()) {
-				Log.debug("     Translating Canonical: {}", path);
-				Log.debug("                     Mount: {} ", securemount);
+			if(Log.isTraceEnabled()) {
+				Log.trace("     Translating Canonical: {}", path);
+				Log.trace("                     Mount: {} ", securemount);
 			}
 
 			boolean containsDotDot = path.indexOf("..") > -1 || path.indexOf('.') > -1;
@@ -262,14 +262,14 @@ public class VirtualMappedFile extends AbstractFileAdapter implements
 
 			// Verify that the canonical path does not exit out of the mount
 			if (canonical.startsWith(canonical2)) {
-				if(Log.isDebugEnabled()) {
-					Log.debug("          Translate Success: {}", FileUtils.removeTrailingSlash(canonical));
+				if(Log.isTraceEnabled()) {
+					Log.trace("          Translate Success: {}", FileUtils.removeTrailingSlash(canonical));
 				}
 				return FileUtils.removeTrailingSlash(canonical);
 			}
 
-			if(Log.isDebugEnabled()) {
-				Log.debug("          Translate Failed: {}", FileUtils.removeTrailingSlash(canonical));
+			if(Log.isTraceEnabled()) {
+				Log.trace("          Translate Failed: {}", FileUtils.removeTrailingSlash(canonical));
 			}
 
 			throw new FileNotFoundException("Path " + path
