@@ -1,4 +1,4 @@
-Maverick Synergy 3.0.0-RC5 - TBC
+Maverick Synergy 3.0.0-RC5 - April 6, 2021
 
 Bug Fixes
     o FileLoggingContext fails with NPE when log path is relative.   
@@ -8,6 +8,11 @@ Bug Fixes
     o Don't pass authenticator to PasswordOverKeyboardInteractiveCallback because there is no way for its future to be completed.
     o OpenSSH certificate extensions values and critical options not encoded correctly during sign operation. 
     o Fixed connection-based logging which was incorrectly preventing logging without an identification or user configured value.
+    o Moved some VirtualFileFactory log statements to TRACE as they are even too chatty for DEBUG mode.
+    o Callback role switching was broken for normal SSH clients due to changes made in TransportProtocol relating to posting of identification string.
+    o Moved connection error TRACE statement to DEBUG
+    o Callback mount URI should be passed to VFSFactory as base path.
+    o AbstractFileSystem should be resilient to error during getAttributes call in readDirectory call.
     
 =================
 =  HISTORY      =
